--- a/webapps/glaf/static/plugins/easyui/themes/blue/easyui.css
+++ b/webapps/glaf/static/plugins/easyui/themes/blue/easyui.css
@@ -1,3 +1,10 @@
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
 .panel {
   overflow: hidden;
   text-align: left;
@@ -67,7 +74,7 @@
 .panel-tool a:hover {
   opacity: 1;
   filter: alpha(opacity=100);
-  background-color: #99CC00;
+  background-color: #99cc00;
   -moz-border-radius: 3px 3px 3px 3px;
   -webkit-border-radius: 3px 3px 3px 3px;
   border-radius: 3px 3px 3px 3px;
@@ -738,7 +745,7 @@
   border-radius: 5px 5px 5px 5px;
 }
 .l-btn:hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
   border: 1px solid #b7d2ff;
   filter: none;
@@ -754,7 +761,7 @@
   padding: 0;
 }
 .l-btn-plain:hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
   border: 1px solid #b7d2ff;
   -moz-border-radius: 5px 5px 5px 5px;
@@ -989,10 +996,10 @@
   background-color: #E0ECFF;
 }
 .combo-arrow-hover {
-  background-color: #99CC00;
+  background-color: #99cc00;
 }
 .combo-arrow:hover {
-  background-color: #99CC00;
+  background-color: #99cc00;
 }
 .combo .textbox-icon-disabled:hover {
   cursor: default;
@@ -1023,7 +1030,7 @@
   background: inherit;
 }
 .combobox-item-hover {
-  background-color: #99CC00;
+  background-color: #99cc00;
   color: #000000;
 }
 .combobox-item-selected {
@@ -1054,7 +1061,7 @@
   -moz-border-radius: 5px 5px 5px 5px;
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
 }
 .tagbox-remove {
@@ -1306,9 +1313,11 @@
   position: relative;
   border: 0;
 }
-.tabs li a.tabs-inner {
+.tabs li .tabs-inner {
   display: inline-block;
   text-decoration: none;
+  cursor: hand;
+  cursor: pointer;
   margin: 0;
   padding: 0 10px;
   height: 25px;
@@ -1321,11 +1330,11 @@
   -webkit-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
 }
-.tabs li.tabs-selected a.tabs-inner {
+.tabs li.tabs-selected .tabs-inner {
   font-weight: bold;
   outline: none;
 }
-.tabs li.tabs-selected a:hover.tabs-inner {
+.tabs li.tabs-selected .tabs-inner:hover {
   cursor: default;
   pointer: default;
 }
@@ -1334,14 +1343,14 @@
   position: absolute;
   font-size: 1px;
   display: block;
-  height: 13px;
+  height: 12px;
   padding: 0;
   top: 50%;
   margin-top: -6px;
   overflow: hidden;
 }
 .tabs li a.tabs-close {
-  width: 13px;
+  width: 12px;
   right: 5px;
   opacity: 0.6;
   filter: alpha(opacity=60);
@@ -1352,8 +1361,8 @@
 .tabs-p-tool a {
   display: inline-block;
   font-size: 1px;
-  width: 13px;
-  height: 13px;
+  width: 12px;
+  height: 12px;
   margin: 0;
   opacity: 0.6;
   filter: alpha(opacity=60);
@@ -1400,7 +1409,7 @@
 .tabs-header-bottom .tabs li {
   margin: -1px 4px 0 0;
 }
-.tabs-header-bottom .tabs li a.tabs-inner {
+.tabs-header-bottom .tabs li .tabs-inner {
   -moz-border-radius: 0 0 5px 5px;
   -webkit-border-radius: 0 0 5px 5px;
   border-radius: 0 0 5px 5px;
@@ -1458,11 +1467,11 @@
   margin: 0 0 4px -1px;
   float: left;
 }
-.tabs-justified li a.tabs-inner {
+.tabs-justified li .tabs-inner {
   padding-left: 0;
   padding-right: 0;
 }
-.tabs-header-left .tabs li a.tabs-inner {
+.tabs-header-left .tabs li .tabs-inner {
   display: block;
   text-align: left;
   padding-left: 10px;
@@ -1471,7 +1480,7 @@
   -webkit-border-radius: 5px 0 0 5px;
   border-radius: 5px 0 0 5px;
 }
-.tabs-header-right .tabs li a.tabs-inner {
+.tabs-header-right .tabs li .tabs-inner {
   display: block;
   text-align: left;
   padding-left: 10px;
@@ -1509,7 +1518,7 @@
 .tabs-header-right .tabs-pill {
   padding-left: 3px;
 }
-.tabs-header .tabs-pill li a.tabs-inner {
+.tabs-header .tabs-pill li .tabs-inner {
   -moz-border-radius: 5px 5px 5px 5px;
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
@@ -1552,12 +1561,12 @@
 .tabs li a.tabs-close {
   background: url('images/tabs_icons.png') no-repeat -34px center;
 }
-.tabs li a.tabs-inner:hover {
-  background: #99CC00;
+.tabs li .tabs-inner:hover {
+  background: #99cc00;
   color: #000000;
   filter: none;
 }
-.tabs li.tabs-selected a.tabs-inner {
+.tabs li.tabs-selected .tabs-inner {
   background-color: #ffffff;
   color: #0E2D5F;
   background: -webkit-linear-gradient(top,#EFF5FF 0,#ffffff 100%);
@@ -1567,7 +1576,7 @@
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#EFF5FF,endColorstr=#ffffff,GradientType=0);
 }
-.tabs-header-bottom .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-bottom .tabs li.tabs-selected .tabs-inner {
   background: -webkit-linear-gradient(top,#ffffff 0,#EFF5FF 100%);
   background: -moz-linear-gradient(top,#ffffff 0,#EFF5FF 100%);
   background: -o-linear-gradient(top,#ffffff 0,#EFF5FF 100%);
@@ -1575,7 +1584,7 @@
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,endColorstr=#EFF5FF,GradientType=0);
 }
-.tabs-header-left .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-left .tabs li.tabs-selected .tabs-inner {
   background: -webkit-linear-gradient(left,#EFF5FF 0,#ffffff 100%);
   background: -moz-linear-gradient(left,#EFF5FF 0,#ffffff 100%);
   background: -o-linear-gradient(left,#EFF5FF 0,#ffffff 100%);
@@ -1583,7 +1592,7 @@
   background-repeat: repeat-y;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#EFF5FF,endColorstr=#ffffff,GradientType=1);
 }
-.tabs-header-right .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-right .tabs li.tabs-selected .tabs-inner {
   background: -webkit-linear-gradient(left,#ffffff 0,#EFF5FF 100%);
   background: -moz-linear-gradient(left,#ffffff 0,#EFF5FF 100%);
   background: -o-linear-gradient(left,#ffffff 0,#EFF5FF 100%);
@@ -1591,7 +1600,7 @@
   background-repeat: repeat-y;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,endColorstr=#EFF5FF,GradientType=1);
 }
-.tabs li a.tabs-inner {
+.tabs li .tabs-inner {
   color: #0E2D5F;
   background-color: #E0ECFF;
   background: -webkit-linear-gradient(top,#EFF5FF 0,#E0ECFF 100%);
@@ -1614,31 +1623,31 @@
 .tabs-tool,
 .tabs,
 .tabs-panels,
-.tabs li a.tabs-inner,
-.tabs li.tabs-selected a.tabs-inner,
-.tabs-header-bottom .tabs li.tabs-selected a.tabs-inner,
-.tabs-header-left .tabs li.tabs-selected a.tabs-inner,
-.tabs-header-right .tabs li.tabs-selected a.tabs-inner {
+.tabs li .tabs-inner,
+.tabs li.tabs-selected .tabs-inner,
+.tabs-header-bottom .tabs li.tabs-selected .tabs-inner,
+.tabs-header-left .tabs li.tabs-selected .tabs-inner,
+.tabs-header-right .tabs li.tabs-selected .tabs-inner {
   border-color: #95B8E7;
 }
 .tabs-p-tool a:hover,
 .tabs li a:hover.tabs-close,
 .tabs-scroller-over {
-  background-color: #99CC00;
+  background-color: #99cc00;
 }
-.tabs li.tabs-selected a.tabs-inner {
+.tabs li.tabs-selected .tabs-inner {
   border-bottom: 1px solid #ffffff;
 }
-.tabs-header-bottom .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-bottom .tabs li.tabs-selected .tabs-inner {
   border-top: 1px solid #ffffff;
 }
-.tabs-header-left .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-left .tabs li.tabs-selected .tabs-inner {
   border-right: 1px solid #ffffff;
 }
-.tabs-header-right .tabs li.tabs-selected a.tabs-inner {
+.tabs-header-right .tabs li.tabs-selected .tabs-inner {
   border-left: 1px solid #ffffff;
 }
-.tabs-header .tabs-pill li.tabs-selected a.tabs-inner {
+.tabs-header .tabs-pill li.tabs-selected .tabs-inner {
   background: #ffe48d;
   color: #000000;
   filter: none;
@@ -1918,7 +1927,7 @@
 }
 .datagrid-row-over,
 .datagrid-header td.datagrid-header-over {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
   cursor: default;
 }
@@ -1934,6 +1943,20 @@
 }
 .datagrid-header .datagrid-filter-row td.datagrid-header-over {
   background: inherit;
+}
+.datagrid-split-proxy {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  border-left: 1px solid #ffab3f;
+}
+.datagrid-moving-proxy {
+  border: 1px solid #ffab3f;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 4px;
 }
 .propertygrid .datagrid-view1 .datagrid-body td {
   padding-bottom: 1px;
@@ -2051,7 +2074,7 @@
   border-color: #ccc;
 }
 .m-list li>a:hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
 }
 .m-list .m-list-group {
@@ -2324,7 +2347,7 @@
 .calendar-hover,
 .calendar-nav-hover,
 .calendar-menu-hover {
-  background-color: #99CC00;
+  background-color: #99cc00;
   color: #000000;
 }
 .calendar-hover {
@@ -2444,7 +2467,7 @@
   background-color: transparent;
 }
 .spinner-arrow-hover {
-  background-color: #99CC00;
+  background-color: #99cc00;
   opacity: 1.0;
   filter: alpha(opacity=100);
 }
@@ -2456,7 +2479,7 @@
 .spinner-arrow-down:hover {
   opacity: 1.0;
   filter: alpha(opacity=100);
-  background-color: #99CC00;
+  background-color: #99cc00;
 }
 .textbox-disabled .spinner-button-top:hover,
 .textbox-disabled .spinner-button-bottom:hover,
@@ -2612,7 +2635,7 @@
 .slider-tip {
   position: absolute;
   display: inline-block;
-  line-height: 13px;
+  line-height: 12px;
   font-size: 14px;
   white-space: nowrap;
   top: -22px;
@@ -2794,7 +2817,7 @@
 .menu-active {
   border-color: #b7d2ff;
   color: #000000;
-  background: #99CC00;
+  background: #99cc00;
 }
 .menu-active-disabled {
   border-color: transparent;
@@ -2814,7 +2837,7 @@
 }
 .m-btn-active,
 .s-btn-active {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
   border: 1px solid #b7d2ff;
   filter: none;
@@ -2892,7 +2915,7 @@
 .m-btn-plain-active,
 .s-btn-plain-active {
   border-color: #b7d2ff;
-  background-color: #99CC00;
+  background-color: #99cc00;
   color: #000000;
 }
 .s-btn:hover .m-btn-line,
@@ -3105,12 +3128,16 @@
   border-color: #95B8E7;
 }
 .tree-node-hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #000000;
 }
 .tree-node-selected {
   background: #ffe48d;
   color: #000000;
+}
+.tree-node-disabled {
+  opacity: 0.5;
+  cursor: default;
 }
 .tree-node-hidden {
   display: none;
@@ -3170,7 +3197,7 @@
 .tooltip-right .tooltip-arrow {
   left: 0;
   top: 50%;
-  margin: -6px 0 0 -13px;
+  margin: -6px 0 0 -12px;
 }
 .tooltip-left .tooltip-arrow-outer {
   right: 0;
@@ -3180,7 +3207,7 @@
 .tooltip-left .tooltip-arrow {
   right: 0;
   top: 50%;
-  margin: -6px -13px 0 0;
+  margin: -6px -12px 0 0;
 }
 .tooltip-top .tooltip-arrow-outer {
   bottom: 0;
@@ -3190,7 +3217,7 @@
 .tooltip-top .tooltip-arrow {
   bottom: 0;
   left: 50%;
-  margin: 0 0 -13px -6px;
+  margin: 0 0 -12px -6px;
 }
 .tooltip-bottom .tooltip-arrow-outer {
   top: 0;
@@ -3200,7 +3227,7 @@
 .tooltip-bottom .tooltip-arrow {
   top: 0;
   left: 50%;
-  margin: -13px 0 0 -6px;
+  margin: -12px 0 0 -6px;
 }
 .tooltip {
   background-color: #ffffff;
@@ -3385,11 +3412,11 @@
   color: #0E2D5F;
 }
 .sidemenu .accordion-header:hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #0E2D5F;
 }
 .sidemenu .tree-node-hover {
-  background: #99CC00;
+  background: #99cc00;
   color: #0E2D5F;
 }
 .sidemenu .tree-node-selected {
@@ -3426,8 +3453,11 @@
 }
 .sidemenu-tooltip {
   padding: 0;
-  margin: 0 -13px;
+  margin: 0 -12px;
   border: 0;
+}
+.sidemenu-tooltip.tooltip-left {
+  margin: 0 12px;
 }
 .sidemenu-tooltip .tooltip-arrow-outer,
 .sidemenu-tooltip .tooltip-arrow {
